# modern-assembly

./: .gitignore  Cargo.toml  README.md  asm.asm
.github/ISSUE_TEMPLATE/: blank-issue.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: rust-build.yml
src/lib/: codegen.rs  lexer.rs  modern_asm.rs  parser.rs
src/lib/ast/: ast.rs
src/lib/lexer/: lexer.rs
src/lib/parser/: parser.rs
src/lib/types/: call_type.rs  const_type.rs  func_type.rs  if_type.rs  lang_type.rs  mod.rs  op_type.rs  primitive_type.rs  var_type.rs
