[package]
name = "modern_asm"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }

[lib]
name = "modern_asm"
path = "src/lib/modern_asm.rs"

[[bin]]
name = "modern_asm"
path = "src/bin/main.rs"
